crates/syntax/tests/snapshots/parser__parser_named one-tuple.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..12,
        statements: StatementList {
            span: 0..12,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..12,
                    extras: ItemExtras {
                        leading: LeadingExtras(
                            [],
                        ),
                        trailing: TrailingExtras(
                            [],
                        ),
                    },
                    attributes: [],
                    expression: Tuple(
                        TupleExpression {
                            span: 0..12,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            values: [
                                TupleItem {
                                    span: 1..11,
                                    extras: ItemExtras {
                                        leading: LeadingExtras(
                                            [],
                                        ),
                                        trailing: TrailingExtras(
                                            [],
                                        ),
                                    },
                                    name: Some(
                                        Identifier {
                                            span: 1..7,
                                            name: "length",
                                        },
                                    ),
                                    value: Literal(
                                        Literal {
                                            span: 10..11,
                                            extras: ItemExtras {
                                                leading: LeadingExtras(
                                                    [],
                                                ),
                                                trailing: TrailingExtras(
                                                    [],
                                                ),
                                            },
                                            literal: Integer(
                                                IntegerLiteral {
                                                    span: 10..11,
                                                    value: 1,
                                                    raw: "1",
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
        },
    },
)
