crates/syntax/tests/snapshots/parser__parser_one-tuple.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..4,
        statements: StatementList {
            span: 0..4,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..4,
                    extras: ItemExtras {
                        leading: [],
                        trailing: [],
                    },
                    attributes: [],
                    expression: Tuple(
                        TupleExpression {
                            span: 0..4,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            values: [
                                TupleItem {
                                    span: 1..2,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    name: None,
                                    value: Literal(
                                        Literal {
                                            span: 1..2,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [],
                                            },
                                            literal: Integer(
                                                IntegerLiteral {
                                                    span: 1..2,
                                                    value: 1,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
        },
    },
)
