crates/syntax/tests/snapshots/parser__parser_partially named tuple.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..17,
        statements: StatementList {
            span: 0..17,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                Expression(
                    ExpressionStatement {
                        span: 0..17,
                        extras: ItemExtras {
                            leading: LeadingExtras(
                                [],
                            ),
                            trailing: TrailingExtras(
                                [],
                            ),
                        },
                        attributes: [],
                        expression: Tuple(
                            TupleExpression {
                                span: 0..17,
                                extras: ItemExtras {
                                    leading: LeadingExtras(
                                        [],
                                    ),
                                    trailing: TrailingExtras(
                                        [],
                                    ),
                                },
                                values: [
                                    TupleItem {
                                        span: 1..4,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        name: None,
                                        value: Literal(
                                            Literal {
                                                span: 1..4,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                literal: String(
                                                    StringLiteral {
                                                        span: 1..4,
                                                        content: "a",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                    TupleItem {
                                        span: 6..16,
                                        extras: ItemExtras {
                                            leading: LeadingExtras(
                                                [],
                                            ),
                                            trailing: TrailingExtras(
                                                [],
                                            ),
                                        },
                                        name: Some(
                                            Identifier {
                                                span: 6..12,
                                                name: "length",
                                            },
                                        ),
                                        value: Literal(
                                            Literal {
                                                span: 15..16,
                                                extras: ItemExtras {
                                                    leading: LeadingExtras(
                                                        [],
                                                    ),
                                                    trailing: TrailingExtras(
                                                        [],
                                                    ),
                                                },
                                                literal: Integer(
                                                    IntegerLiteral {
                                                        span: 15..16,
                                                        value: 1,
                                                        raw: "1",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                    },
                ),
            ),
        },
    },
)
