crates/syntax/tests/snapshots/parser__parser_percent unit.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..2,
        statements: StatementList {
            span: 0..2,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..2,
                    extras: ItemExtras {
                        leading: LeadingExtras(
                            [],
                        ),
                        trailing: TrailingExtras(
                            [],
                        ),
                    },
                    attributes: [],
                    expression: Literal(
                        Literal {
                            span: 0..2,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            literal: Quantity(
                                QuantityLiteral {
                                    span: 0..2,
                                    value: 1.0,
                                    raw: "1",
                                    unit: Unit {
                                        span: 1..2,
                                        name: "%",
                                    },
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
