crates/syntax/tests/snapshots/parser__parser_plain string in expr.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..38,
        statements: StatementList {
            span: 0..38,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                (
                    LocalAssignment(
                        LocalAssignment {
                            span: 0..37,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            attributes: [],
                            name: Identifier {
                                span: 0..1,
                                name: "a",
                            },
                            ty: None,
                            value: BinaryOperation(
                                BinaryOperation {
                                    span: 4..37,
                                    lhs: Literal(
                                        Literal {
                                            span: 4..34,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [
                                                    Whitespace(
                                                        " ",
                                                    ),
                                                ],
                                            },
                                            literal: String(
                                                StringLiteral {
                                                    span: 4..33,
                                                    content: "plain string int expression",
                                                },
                                            ),
                                        },
                                    ),
                                    operation: Operator {
                                        span: 34..35,
                                        operation: Add,
                                    },
                                    rhs: Literal(
                                        Literal {
                                            span: 36..37,
                                            extras: ItemExtras {
                                                leading: [],
                                                trailing: [],
                                            },
                                            literal: Integer(
                                                IntegerLiteral {
                                                    span: 36..37,
                                                    value: 1,
                                                    raw: "1",
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    None,
                ),
            ],
            tail: None,
        },
    },
)
