crates/syntax/tests/snapshots/parser__parser_plain string.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(input).map(|doc| doc.ast)
---
Ok(
    Source {
        span: 0..14,
        statements: StatementList {
            span: 0..14,
            extras: ItemExtras {
                leading: LeadingExtras(
                    [],
                ),
                trailing: TrailingExtras(
                    [],
                ),
            },
            statements: [],
            tail: Some(
                ExpressionStatement {
                    span: 0..14,
                    extras: ItemExtras {
                        leading: LeadingExtras(
                            [],
                        ),
                        trailing: TrailingExtras(
                            [],
                        ),
                    },
                    attributes: [],
                    expression: Literal(
                        Literal {
                            span: 0..14,
                            extras: ItemExtras {
                                leading: LeadingExtras(
                                    [],
                                ),
                                trailing: TrailingExtras(
                                    [],
                                ),
                            },
                            literal: String(
                                StringLiteral {
                                    span: 0..14,
                                    content: "plain string",
                                },
                            ),
                        },
                    ),
                },
            ),
        },
    },
)
