crates/syntax/tests/snapshots/parser__parser_pub assigment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..12,
        statements: StatementList {
            span: 0..12,
            statements: [
                Assignment(
                    Assignment {
                        span: 0..11,
                        doc: None,
                        attributes: [],
                        visibility: Some(
                            Public,
                        ),
                        qualifier: None,
                        name: Identifier {
                            span: 4..7,
                            name: "foo",
                        },
                        ty: None,
                        value: Literal(
                            Integer(
                                IntegerLiteral {
                                    span: 10..11,
                                    value: 1,
                                },
                            ),
                        ),
                    },
                ),
            ],
            tail: None,
            tail_comment: None,
        },
    },
)
