crates/syntax/tests/snapshots/parser__parser_pub assignment.snap
---
source: crates/syntax/tests/parser.rs
expression: parse(tokens.as_slice())
---
Ok(
    SourceFile {
        span: 0..12,
        statements: StatementList {
            span: 0..12,
            extras: ItemExtras {
                leading: [],
                trailing: [],
            },
            statements: [
                (
                    Const(
                        ConstAssignment {
                            span: 0..11,
                            keyword_span: 0..3,
                            extras: ItemExtras {
                                leading: [],
                                trailing: [],
                            },
                            doc: None,
                            attributes: [],
                            visibility: Some(
                                Public,
                            ),
                            name: Identifier {
                                span: 4..7,
                                name: "FOO",
                            },
                            ty: None,
                            value: Literal(
                                Literal {
                                    span: 10..11,
                                    extras: ItemExtras {
                                        leading: [],
                                        trailing: [],
                                    },
                                    literal: Integer(
                                        IntegerLiteral {
                                            span: 10..11,
                                            value: 1,
                                            raw: "1",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    None,
                ),
            ],
            tail: None,
        },
    },
)
